src/regression_tests/snapshots/nixfmt_rs__regression_tests__parser__regression_decorated_multiline_comment.snap
---
source: src/regression_tests/parser.rs
description: "/*\n * Multiline, decorated comments\n * # This ain't a nest'd comm'nt\n */\n\"x\""
---
Term
    [0;95;1m([0m SimpleString
        [0;96;1m([0m Ann
            [0;93;1m{[0m preTrivia = fromList
                [0;35m[[0m BlockComment False
                    [0;36m[[0m [0;97;1m"[0m[0;94;1mMultiline, decorated comments[0m[0;97;1m"[0m
                    [0;36m,[0m [0;97;1m"[0m[0;94;1m# This ain't a nest'd comm'nt[0m[0;97;1m"[0m
                    [0;36m][0m
                [0;35m][0m
            [0;93;1m,[0m sourceLine = Pos [0;92;1m5[0m
            [0;93;1m,[0m value =
                [0;35m[[0m
                    [0;36m[[0m TextPart [0;97;1m"[0m[0;94;1mx[0m[0;97;1m"[0m [0;36m][0m
                [0;35m][0m
            [0;93;1m,[0m trailComment = Nothing
            [0;93;1m}[0m
        [0;96;1m)[0m
    [0;95;1m)[0m
