src/regression_tests/snapshots/nixfmt_rs__regression_tests__parser__regression_empty_container_with_comment-2.snap
---
source: src/regression_tests/parser.rs
description: "[\n  # comment\n]"
---
Term
    [0;95;1m([0m List
        [0;96;1m([0m Ann
            [0;93;1m{[0m preTrivia = fromList [0;35m[[0m[0;35m][0m
            [0;93;1m,[0m sourceLine = Pos [0;92;1m1[0m
            [0;93;1m,[0m value = TBrackOpen
            [0;93;1m,[0m trailComment = Nothing
            [0;93;1m}[0m
        [0;96;1m)[0m
        [0;96;1m[[0m Comments
            [0;93;1m([0m fromList
                [0;35m[[0m LineComment [0;97;1m"[0m[0;94;1m comment[0m[0;97;1m"[0m [0;35m][0m
            [0;93;1m)[0m
        [0;96;1m][0m
        [0;96;1m([0m Ann
            [0;93;1m{[0m preTrivia = fromList [0;35m[[0m[0;35m][0m
            [0;93;1m,[0m sourceLine = Pos [0;92;1m3[0m
            [0;93;1m,[0m value = TBrackClose
            [0;93;1m,[0m trailComment = Nothing
            [0;93;1m}[0m
        [0;96;1m)[0m
    [0;95;1m)[0m
